--- a/app/src/static/sass/patterns/_dnd-ui-forms.scss
+++ b/app/src/static/sass/patterns/_dnd-ui-forms.scss
@@ -5,7 +5,7 @@
 *****************************************************************************/
 form {
 
-    li {
+    > ul > li {
         padding-bottom: dnd-calc(10, 16, em);
 
         &:last-child {
