added disabled state to option dropdown component, implemented disabled state for create spellbook filters before a character class is selected

--- a/app/src/components/dndOptionDropdown/dndOptionDropdownView.html
+++ b/app/src/components/dndOptionDropdown/dndOptionDropdownView.html
@@ -1,7 +1,8 @@
 <div class="dnd-option-dropdown"
      ng-class="{'option-block': vm.selectConfig.displayMode ==='block',
      'option-inline-block': vm.selectConfig.displayMode ==='inline-block',
-     'active': vm.isListOpen}">
+     'active': vm.isListOpen,
+     'disabled': vm.dropdownDisabled}">
     <label class="dropdown-label">{{vm.selectConfig.label}}</label>
     <div class="selected-option" ng-click="vm.toggleOptionList()">
         <span class="selected-option-text">{{vm.selectedOption.name}}</span>
