--- a/app/src/static/sass/core/_variables.scss
+++ b/app/src/static/sass/core/_variables.scss
@@ -19,6 +19,8 @@ $black-lighten-90: lighten($black, 90%);
 // Generic Colors
 $white: #fff;
 $gray: #e1e1e1;
+$gray-darken-10: darken($gray, 10%);
+$gray-darken-20: darken($gray, 20%);
 
 
 // Brand Colors
