--- a/app/src/views/spellbook/5e/create/createSpellbookView.html
+++ b/app/src/views/spellbook/5e/create/createSpellbookView.html
@@ -28,5 +28,6 @@
     </div>
     <dnd-spell-list list-mode="vm.spellListConfig.mode"
                     list-class-filter="vm.spellClassesDropdown.selectedClass"
-                    list-disabled="vm.isListDisabled()"></dnd-spell-list>
+                    list-disabled="vm.isListDisabled()"
+                    selected-spells="vm.spellbookData.spells"></dnd-spell-list>
 </div>
