--- a/app/src/components/spellList/spellListView.html
+++ b/app/src/components/spellList/spellListView.html
@@ -45,7 +45,8 @@
                     filter: {level: vm.spellLevelsDropdown.selectedLevel.value || undefined} |
                     filter: {school: vm.spellSchoolsDropdown.selectedSchool.value || undefined} |
                     filter: {classes: vm.spellClassesDropdown.selectedClass.value || vm.listConfig.listClassFilter.value || undefined} : true |
-                    orderBy: vm.spellOrder track by $index">
+                    orderBy: vm.spellOrder track by $index"
+                    ng-class="{'selected': vm.checkSpellSelected(spell)}">
                     <div class="spell-list-col name-col">
                         <p>{{spell.name}}</p>
                     </div>
@@ -54,6 +55,9 @@
                     </div>
                     <div class="spell-list-col level-col">
                         <p>{{vm.getLevelTranslation(spell.level)}}</p>
+                    </div>
+                    <div ng-if="vm.listConfig.listMode === 'edit' && !vm.listConfig.listDisabled" class="toggle-spell-selected">
+                        <p ng-click="vm.toggleSpellSelected(spell)">TOG</p>
                     </div>
                 </li>
             </ul>
