--- a/app/src/components/spellList/spellListView.html
+++ b/app/src/components/spellList/spellListView.html
@@ -1,11 +1,14 @@
-<div class="spell-list-module general-module" ng-class="{editMode: vm.listConfig.listMode === 'edit'}">
+<div class="spell-list-module general-module"
+     ng-class="{'createMode': vm.listConfig.listMode === 'create',
+                'editMode': vm.listConfig.listMode === 'edit',
+                'disabled': vm.listConfig.listDisabled}">
     <div class="mod-header-wrapper" ng-if="vm.listConfig.listMode === 'view'">
         <div class="mod-header">
             <h4 translate="dndspells.SPELL_LIST.HEADER"></h4>
         </div>
     </div>
     <div class="mod-body-wrapper">
-        <div class="mod-body" ng-class="{disabled: vm.listConfig.listDisabled}">
+        <div class="mod-body">
             <div class="spell-list-filters">
                 <div class="spell-list-filter level-filter">
                     <dnd-option-dropdown select-options="vm.spellLevelsDropdown.spellLevels"
@@ -41,12 +44,13 @@
                         <p translate="dndspells.SPELL_LIST.SPELL_LEVEL"></p>
                     </div>
                 </li>
-                <li class="spell-list-row" ng-repeat="spell in vm.spellsData |
-                    filter: {level: vm.spellLevelsDropdown.selectedLevel.value || undefined} |
-                    filter: {school: vm.spellSchoolsDropdown.selectedSchool.value || undefined} |
-                    filter: {classes: vm.spellClassesDropdown.selectedClass.value || vm.listConfig.listClassFilter.value || undefined} : true |
-                    orderBy: vm.spellOrder track by $index"
-                    ng-class="{'selected': vm.checkSpellSelected(spell)}">
+                <li class="spell-list-row"
+                    ng-repeat="spell in vm.spellsData |
+                        filter: {level: vm.spellLevelsDropdown.selectedLevel.value || undefined} |
+                        filter: {school: vm.spellSchoolsDropdown.selectedSchool.value || undefined} |
+                        filter: {classes: vm.spellClassesDropdown.selectedClass.value || vm.listConfig.listClassFilter.value || undefined} : true |
+                        orderBy: vm.spellOrder track by $index"
+                    ng-class="{'selected': vm.checkSpellSelected(spell.id)}">
                     <div class="spell-list-col name-col">
                         <p>{{spell.name}}</p>
                     </div>
@@ -56,8 +60,8 @@
                     <div class="spell-list-col level-col">
                         <p>{{vm.getLevelTranslation(spell.level)}}</p>
                     </div>
-                    <div ng-if="vm.listConfig.listMode === 'edit' && !vm.listConfig.listDisabled" class="toggle-spell-selected">
-                        <p ng-click="vm.toggleSpellSelected(spell)">TOG</p>
+                    <div ng-if="(vm.listConfig.listMode === 'create' || vm.listConfig.listMode === 'edit') && !vm.listConfig.listDisabled" class="toggle-spell-selected">
+                        <p ng-click="vm.toggleSpellSelected(spell.id)">TOG</p>
                     </div>
                 </li>
             </ul>
