--- a/app/src/components/sideboard/sideboardView.html
+++ b/app/src/components/sideboard/sideboardView.html
@@ -7,18 +7,18 @@
     <div class="mod-body-wrapper">
         <div class="mod-body">
             <ul class="sidebar-nav">
-                <li class="sidebar-nav-item" ng-class="{'active': vm.stateDetails.name === 'home'}"
+                <li class="sidebar-nav-item" ng-class="{'selected': vm.stateDetails.name === 'home'}"
                     ng-if="!vm.userData.loggedin" ng-click="vm.navigate('home')">
                     <span translate="dndspells.SIDEBOARD.VIEW.HOME"></span>
                 </li>
-                <li class="sidebar-nav-item" ng-class="{'active': vm.stateDetails.name === 'dashboard'}"
+                <li class="sidebar-nav-item" ng-class="{'selected': vm.stateDetails.name === 'dashboard'}"
                     ng-if="vm.userData.loggedin" ng-click="vm.navigate('dashboard')">
                     <span translate="dndspells.SIDEBOARD.VIEW.DASHBOARD"></span>
                 </li>
-                <li class="sidebar-nav-item" ng-class="{'active': vm.stateDetails.name === 'spells'}" ng-click="vm.navigate('spells')">
+                <li class="sidebar-nav-item" ng-class="{'selected': vm.stateDetails.name === 'spells'}" ng-click="vm.navigate('spells')">
                     <span translate="dndspells.SIDEBOARD.VIEW.SPELL_LIST"></span>
                 </li>
-                <li class="sidebar-nav-item" ng-class="{'active': vm.stateDetails.name === 'spellbook.view'}" ng-click="vm.navigate('spellbook.view')">
+                <li class="sidebar-nav-item" ng-class="{'selected': vm.stateDetails.name === 'spellbook.view'}" ng-click="vm.navigate('spellbook.view')">
                     <span translate="dndspells.SIDEBOARD.VIEW.SPELLBOOKS"></span>
                 </li>
             </ul>
@@ -32,7 +32,7 @@
     <div class="mod-body-wrapper">
         <div class="mod-body">
             <ul class="sidebar-nav">
-                <li class="sidebar-nav-item" ng-class="{'active': vm.stateDetails.name === 'spellbook.create'}"
+                <li class="sidebar-nav-item" ng-class="{'selected': vm.stateDetails.name === 'spellbook.create'}"
                     ng-click="vm.navigate('spellbook.create')">
                     <span translate="dndspells.SIDEBOARD.CREATE.SPELLBOOK"></span>
                 </li>
