--- a/app/src/static/sass/core/_core.scss
+++ b/app/src/static/sass/core/_core.scss
@@ -12,6 +12,7 @@ html {
 }
 
 body {
+    background: $gray-90;
     font-size: 1em; // Set application base font-size to 16px
     line-height: dnd-calc(20, 16); // Set base line-height to 20px
 }
@@ -19,6 +20,10 @@ body {
 /*****************************************************************************
 **		Typography
 *****************************************************************************/
+h1, h2, h3, h4, h5, h6, p {
+    color: $white;
+}
+
 h2 {
     font-size: dnd-calc(24, 16, em);
     margin: 0 0 dnd-calc(18, 24, em) 0;
