--- a/app/src/static/sass/ui.scss
+++ b/app/src/static/sass/ui.scss
@@ -28,6 +28,7 @@
 @import "modules/dnd-ui-sideboard";
 @import "modules/dnd-ui-login-module";
 @import "modules/dnd-ui-spell-list-module";
+@import "modules/dnd-ui-spellbook-create-module";
 
 
 /*****************************************************************************
