--- a/app/src/components/spellList/spellListView.html
+++ b/app/src/components/spellList/spellListView.html
@@ -60,8 +60,10 @@
                     <div class="spell-list-col level-col">
                         <p>{{vm.getLevelTranslation(spell.level)}}</p>
                     </div>
-                    <div ng-if="(vm.listConfig.listMode === 'create' || vm.listConfig.listMode === 'edit') && !vm.listConfig.listDisabled" class="toggle-spell-selected">
-                        <p ng-click="vm.toggleSpellSelected(spell.id)">TOG</p>
+                    <div class="toggle-spell-selected"
+                         ng-class="{'selected': vm.checkSpellSelected(spell.id)}"
+                         ng-if="(vm.listConfig.listMode === 'create' || vm.listConfig.listMode === 'edit') && !vm.listConfig.listDisabled">
+                        <p ng-click="vm.toggleSpellSelected(spell.id)">+</p>
                     </div>
                 </li>
             </ul>
