--- a/app/src/static/sass/patterns/_dnd-ui-buttons.scss
+++ b/app/src/static/sass/patterns/_dnd-ui-buttons.scss
@@ -7,6 +7,7 @@
     background: $brand-primary;
     border: 1px solid $brand-primary;
     color: $white;
+    outline: none;
     transition: all .15s ease-in-out;
 
     &:hover {
