--- a/app/src/views/dashboard/dashboardView.html
+++ b/app/src/views/dashboard/dashboardView.html
@@ -1,7 +1,14 @@
-<div class="dashboard">
-    <p>dashboard view</p>
-    <br /><br />
-    <p ng-click="vm.checkUserLogin()">check user login</p>
-    <br /><br />
-    <p ng-click="vm.logout()">logout</p>
+<div class="dashboard general-module">
+    <div class="mod-header-wrapper">
+        <div class="mod-header">
+            <h4 translate="dndspells.DASHBOARD.HEADER"></h4>
+        </div>
+    </div>
+    <div class="mod-body-wrapper">
+        <div class="mod-body">
+            <p ng-click="vm.checkUserLogin()">check user login</p>
+            <br /><br />
+            <p ng-click="vm.logout()">logout</p>
+        </div>
+    </div>
 </div>
