--- a/app/src/static/sass/modules/_dnd-ui-top-nav.scss
+++ b/app/src/static/sass/modules/_dnd-ui-top-nav.scss
@@ -8,7 +8,7 @@
     border-bottom: 1px solid $teal-darken-10;
     height: dnd-calc(40, 16, em);
     left: 0;
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
     z-index: 1000;
